--- a/src/locales/en/antioch.json
+++ b/src/locales/en/antioch.json
@@ -22,7 +22,7 @@
       }
     },
     "testnetGoals": {
-      "title": "Testnetzwerk
+      "title": "Ziele des Testnet"
       "subtitle": "Die unten aufgeführten Ziele sind eine vereinfachte Darstellung unserer Hauptziele für das Antioch-Testnetzwerk"
       "goals": {
         "substrateVersion": {
