german translation to sumer.json

--- a/src/locales/en/sumer.json
+++ b/src/locales/en/sumer.json
@@ -1,10 +1,10 @@
 {
   "sumer": {
     "siteMetadata": {
-      "description": "Erforsche das Sumer-Testnetzwerk"
+      "description": "Erforsche das Sumer Testnet"
     },
     "hero": {
-      "title": "Sumer-Netzwerk",
+      "title": "Sumer Network",
       "text": "Neben anderen Änderungen bietet die Version des Sumer-Testnetzwerks wichtige Verbesserungen beim Hochladen von Inhalten über unsere Wiedergabe-App."
     },
     "criticalDocuments": {
