--- a/src/locales/en/founding-members.json
+++ b/src/locales/en/founding-members.json
@@ -23,7 +23,7 @@
       "currentNumber": "Nummer des aktuellen Zeitraums",
       "ends": "Endet",
       "endedOn": "Endet auf",
-      "weeks": "Wochen,
+      "weeks": "Wochen",
       "days": "Tage",
       "hours": "Stunden",
       "minutes": "Minuten",
