--- a/src/locales/en/manifesto.json
+++ b/src/locales/en/manifesto.json
@@ -1,72 +1,72 @@
 {
   "manifesto": {
     "siteMetadata": {
-      "description": "Read the Joystream Manifesto"
+      "description": "Lese das Joystream-Manifest"
     },
     "hero": {
-      "title": "The Joystream Manifesto",
-      "text": "Our Manifesto sets out both the problems we believe are associated with digital media platforms in their current form as well as our proposed solution to these concerns."
+      "title": "Das Joystream-Manifest",
+      "text": "Unser Manifest legt sowohl die Probleme dar, die unserer Meinung nach mit digitalen Medienplattformen in ihrer derzeitigen Form verbunden sind, als auch unseren Lösungsvorschlag für diese Bedenken."
     },
     "problem": {
       "title": "Problem",
       "text": {
-        "artAsTool": "We believe that art, be it as literature, music, film, games or performance, is a critical tool through which societies establish a shared understanding of what is common knowledge among all members. These expressions define values and narratives that end up shaping culture, faith and even public policy. It therefore matters deeply how it is financed, distributed and paid for.",
-        "mediaAsPrimaryMedium": "Digital media has become the primary medium through which such expression is distributed, and digital media platforms have become the key institutions organizing this activity.",
-        "unaccountableInstitutions": "Unfortunately, due to network effects, economies of scale, regulations and political interests, we are today left with handful of massive institutions which set the terms for how this happens. They are almost entirely unaccountable to normal market and political mechanisms.",
-        "filteredOnTheirTerms": "As a result, our stories, expressions and interactions are managed and filtered on their terms. This continues to generate an ever changing set of problems, be it",
-        "inflexible": "inflexible monetization, censorship of controversial speech, inequitable sharing of gains with creators and audience, low platform innovation or lack of credibility with third party developers."
+        "artAsTool": "Wir glauben, dass Kunst, sei es in Form von Literatur, Musik, Film, Spielen oder Performance, ein entscheidendes Instrument ist, mit dem Gesellschaften ein gemeinsames Verständnis dessen schaffen, was allen Mitgliedern bekannt ist. Diese Ausdrucksformen definieren Werte und Erzählungen, die letztendlich die Kultur, den Glauben und sogar die öffentliche Politik prägen. Daher ist es von großer Bedeutung, wie sie finanziert, verbreitet und bezahlt werden",
+        "mediaAsPrimaryMedium": "Digitale Medien sind zum Hauptmedium geworden, über das solche Äußerungen verbreitet werden, und digitale Medienplattformen sind zu den wichtigsten Institutionen geworden, die diese Aktivitäten organisieren.",
+        "unaccountableInstitutions": "Aufgrund von Netzwerkeffekten, Skaleneffekten, Vorschriften und politischen Interessen gibt es heute leider nur noch eine Handvoll massiver Institutionen, die die Bedingungen dafür festlegen, wie dies geschieht. Sie sind den normalen Markt- und politischen Mechanismen fast vollständig entzogen.",
+        "filteredOnTheirTerms": "Infolgedessen werden unsere Geschichten, Äußerungen und Interaktionen nach deren Bedingungen verwaltet und gefiltert. Dies führt zu einer sich ständig verändernden Reihe von Problemen, sei es",
+        "unflexibel": "unflexible Monetarisierung, Zensur kontroverser Äußerungen, ungleiche Aufteilung der Gewinne mit Urhebern und Publikum, geringe Plattforminnovation oder mangelnde Glaubwürdigkeit bei Drittentwicklern."
       }
     },
     "goal": {
-      "title": "Goal",
+      "title": "Ziel",
       "text": {
-        "arrangement": "We call for an arrangement where media platforms are accountable to the people they impact, which are primarily their users, be it as consumers, creatives, third party developer or workers.",
-        "accountability": "It is the absence of such accountability which is the fundamental source of any particular problem at any particular time."
+        "arrangement": "Wir fordern eine Regelung, bei der Medienplattformen den Menschen gegenüber rechenschaftspflichtig sind, auf die sie einwirken, d.h. in erster Linie ihren Nutzern, sei es als Konsumenten, Kreative, Drittentwickler oder Arbeitnehmer.",
+        "Rechenschaftspflicht": "Es ist das Fehlen einer solchen Rechenschaftspflicht, das die grundlegende Quelle eines bestimmten Problems zu einem bestimmten Zeitpunkt ist."
       }
     },
     "thesis": {
-      "title": "Thesis",
+      "title": " These",
       "text": {
-        "coreThesis": "Our core thesis is that there are two basic challenges which must be addressed to achieve this goal, and that an appropriate application of contemporary distributed systems technology, including blockchains, smart contracts and tokens, is the right means to do so."
+        "coreThesis": "Unsere Kernthese ist, dass es zwei grundlegende Herausforderungen gibt, die angegangen werden müssen, um dieses Ziel zu erreichen, und dass eine angemessene Anwendung der zeitgenössischen Technologie für verteilte Systeme, einschließlich Blockchains, Smart Contracts und Tokens, das richtige Mittel ist, um dies zu erreichen."
       }
     },
     "wedge": {
-      "title": "The Wedge",
+      "title": "Der Keil",
       "text": {
-        "alternative": "First is the question of how to create an alternative from scratch in the face of platform externalities which make any new platform nearly useless, regardless of any of its inherent characteristics. The process of doing this sort of bootstrapping has historically been mostly an art, where success has rarely been reproducible.",
-        "blockchainTokens": "We believe that blockchain tokens, earned by and issued to early participants, have been shown to be extremely effective at mobilizing, integrating and motivating an international and dynamic community.",
-        "initialHurdle": "This has now repeatedly allowed nascent communities, like the Bitcoin community, to overcome the initial network effect hurdle [1, 2, 3]. There is no certainty that this will be sufficient, but we believe this mechanism is as promising as anything which is likely to have a chance in a long time."
+        "alternative": "Zunächst stellt sich die Frage, wie man angesichts der externen Effekte einer Plattform, die jede neue Plattform unabhängig von ihren inhärenten Merkmalen nahezu nutzlos machen, eine Alternative aus dem Nichts schaffen kann. Der Prozess dieser Art von Bootstrapping war in der Vergangenheit meist eine Kunst, deren Erfolg selten reproduzierbar war.",
+        "blockchainTokens": "Wir glauben, dass Blockchain-Tokens, die von frühen Teilnehmern verdient und an diese ausgegeben werden, sich als äußerst effektiv bei der Mobilisierung, Integration und Motivation einer internationalen und dynamischen Gemeinschaft erwiesen haben.",
+        "initialHurdle": "Dies hat es neu entstehenden Gemeinschaften, wie der Bitcoin-Gemeinschaft, wiederholt ermöglicht, die anfängliche Hürde des Netzwerkeffekts zu überwinden [1, 2, 3]. Es gibt keine Gewissheit, dass dies ausreichen wird, aber wir glauben, dass dieser Mechanismus so vielversprechend ist wie nichts anderes, das seit langem eine Chance haben wird."
       }
     },
-    "accountability": {
-      "title": "Accountability at scale",
+    "Rechenschaftspflicht": {
+      "title": "Rechenschaftspflicht in großem Maßstab",
       "text": {
-        "createAndSustain": "Second is the question of how to create and sustain accountability in such a platform when it actually reaches scale.",
-        "twoWays": "We understand there to be two fundamental ways that participants can hold institutions of any kind accountable: Voice and exit, in the tradition of Hirschman A. O. [4]."
+        "createAndSustain": "Zweitens stellt sich die Frage, wie die Rechenschaftspflicht in einer solchen Plattform geschaffen und aufrechterhalten werden kann, wenn sie tatsächlich eine Größenordnung erreicht.",
+        "twoWays": "Nach unserem Verständnis gibt es zwei grundlegende Möglichkeiten für die Teilnehmer, Institutionen jeglicher Art zur Rechenschaft zu ziehen: Stimme und Ausgang, in der Tradition von Hirschman A. O. [4]."
       }
     },
-    "voice": {
-      "title": "Voice",
+    "voice ": {
+      "title": "Stimme",
       "text": {
-        "improveWithin": "Voice is the approach of attempting to improve or reform the functioning of an institution from within. The effectiveness of this depends on some capacity to both share reliable information with other members, and have some impact on internal governance processes. Current media platforms provide users no effective way of doing either.",
-        "infrastructure": "We believe that blockchains provide an organizational and economic infrastructure which can address both problems. The public, verifiable and immutable history of economic and administrative records, provides an excellent basis for users to understand the current and past state of the platform. This allows anyone to make incontestable claims about relevant facts and circumstances.",
-        "control": "Further, blockchain tokens allow us to make use and control of a platform inseparable, giving users an automatic seat at the table in deliberating over platform level decisions.",
-        "signWithCrypto": "All that is required to establish, exercise or transfer the capacity to participate in such activity, is the ability to sign messages with identifiable cryptographic keys. Perfectly reliable contracting gives a large, dynamic and unrestricted set of users the means of governing the platform. This can serve a wide range of purposes, such as undertaking projects, regulating participation in different formally specified roles, or even updating the institutional rules themselves. This integration of reliable contracting into the economic rails provides an organizational infrastructure much more in line with our objectives of inclusive control than the normal jurisdictional trust based infrastructure."
+        "improveWithin": "Voice ist der Ansatz, mit dem versucht wird, die Funktionsweise einer Institution von innen heraus zu verbessern oder zu reformieren. Die Wirksamkeit dieses Ansatzes hängt von der Fähigkeit ab, verlässliche Informationen mit anderen Mitgliedern zu teilen und einen gewissen Einfluss auf die internen Governance-Prozesse zu nehmen. Die derzeitigen Medienplattformen bieten den Nutzern keine effektive Möglichkeit, beides zu tun",
+        "Infrastruktur": "Wir glauben, dass Blockchains eine organisatorische und wirtschaftliche Infrastruktur bieten, die beide Probleme lösen kann. Die öffentliche, überprüfbare und unveränderliche Geschichte der wirtschaftlichen und administrativen Aufzeichnungen bietet eine hervorragende Grundlage für die Nutzer, um den aktuellen und vergangenen Zustand der Plattform zu verstehen. Dies ermöglicht es jedem, unanfechtbare Behauptungen über relevante Fakten und Umstände aufzustellen.",
+        "Kontrolle": "Darüber hinaus ermöglichen es Blockchain-Token, die Nutzung und Kontrolle einer Plattform untrennbar miteinander zu verbinden, so dass die Nutzer automatisch einen Sitz am Tisch haben, wenn es um Entscheidungen auf Plattformebene geht."
+        "signWithCrypto": "Alles, was erforderlich ist, um die Fähigkeit zur Teilnahme an einer solchen Aktivität herzustellen, auszuüben oder zu übertragen, ist die Fähigkeit, Nachrichten mit identifizierbaren kryptografischen Schlüsseln zu signieren. Ein absolut zuverlässiges Contracting gibt einer großen, dynamischen und uneingeschränkten Gruppe von Nutzern die Möglichkeit, die Plattform zu steuern. Dies kann einer Vielzahl von Zwecken dienen, z. B. der Durchführung von Projekten, der Regelung der Teilnahme an verschiedenen, formal festgelegten Rollen oder sogar der Aktualisierung der institutionellen Regeln selbst. Diese Integration zuverlässiger Vertragsabschlüsse in die wirtschaftlichen Schienen bietet eine organisatorische Infrastruktur, die unseren Zielen einer integrativen Kontrolle sehr viel besser entspricht als die normale, auf Rechtsprechung basierende Infrastruktur."
       }
     },
     "exit": {
       "title": "Exit",
       "text": {
-        "exit": "Exit is the approach of entirely ending participation in an institution in favor of either joining or creating an alternative. The effectiveness of this depends on costs of leaving, and either joining or creating an alternative, all being low compared to the deprivation in the existing institution. This is currently not the case.",
-        "loweredCosts": "By building platforms based on free & open source software, open protocols and open data — as is the case with Blockchain systems, one dramatically lowers these costs. Since users control their own data, identity and assets, they have a much easier time joining new platforms, and even taking their peers with them.",
-        "competition": "Open protocols and data will make multi homing interfaces abundant, where users may not even need to switch, but instead use multiple platforms simultaneously, which encourages platform level competition [5].",
-        "reusability": "Even more dramatically, reliance on open source means that all the software capital of a platform can easily be reused, and since the entire organizational state is also public, entire ecosystems can be forked to create new alternative platforms with modified policies and objectives."
+        "exit": "Exit ist der Ansatz, die Teilnahme an einer Institution vollständig zu beenden, um entweder beizutreten oder eine Alternative zu schaffen. Die Effektivität dieses Ansatzes hängt davon ab, ob die Kosten für den Austritt, den Beitritt oder die Schaffung einer Alternative im Vergleich zu den Entbehrungen in der bestehenden Einrichtung gering sind. Dies ist derzeit nicht der Fall.",
+        "loweredCosts": "Durch den Aufbau von Plattformen, die auf freier und quelloffener Software, offenen Protokollen und offenen Daten basieren - wie es bei Blockchain-Systemen der Fall ist -, werden diese Kosten drastisch gesenkt. Da die Nutzer die Kontrolle über ihre eigenen Daten, ihre Identität und ihr Vermögen haben, fällt es ihnen viel leichter, sich neuen Plattformen anzuschließen und sogar ihre Mitstreiter mitzunehmen.",
+        "competition": "Offene Protokolle und Daten werden dazu führen, dass es eine Vielzahl von Multi-Homing-Schnittstellen gibt, bei denen die Nutzer möglicherweise nicht einmal wechseln müssen, sondern stattdessen mehrere Plattformen gleichzeitig nutzen, was den Wettbewerb auf Plattformebene fördert [5].",
+        "reusability": "Noch dramatischer ist, dass die Abhängigkeit von Open Source bedeutet, dass das gesamte Software-Kapital einer Plattform leicht wiederverwendet werden kann, und da der gesamte organisatorische Zustand ebenfalls öffentlich ist, können ganze Ökosysteme gegabelt werden, um neue alternative Plattformen mit veränderten Richtlinien und Zielen zu schaffen."
       }
     },
-    "ctaText": "This plan still has room for more people, so get involved by sending an <0>email</0> or joining us on <1>Discord</1> or <2>Reddit</2>.",
+    "ctaText": "Dieser Plan hat noch Platz für mehr Leute, also beteilige dich, indem du eine <0>E-Mail</0> schickst oder uns auf <1>Discord</1> oder <2>Reddit</2> beitrittst.",
     "references": {
-      "title": "References",
-      "text": "<0>[1] Ersam, F. Blockchain Tokens and the dawn of the Decentralized Business Model. Medium. Aug 1, 2016.</0><0>[2] Srinivasan, B. S. Thoughts on Tokens. Medium. May 27, 2017.</0><0>[3] Dixon, C. Crypto Tokens: A Breakthrough in Open Network Design. Medium. June 1, 2017.</0><0>[4] Hirschman, Albert O. Exit, voice, and loyalty: Responses to decline in firms, organizations, and states. Vol. 25. Harvard university press, 1970.</0><0>[5] Rochet, Jean‐Charles, and Jean Tirole. “Platform competition in two‐sided markets.” Journal of the european economic association 1.4 (2003): 990–1029.</0>"
+      "title": "references",
+      "text": "<0>[1] Ersam, F. Blockchain Tokens and the dawn of the Decentralized Business Model. Medium. Aug 1, 2016.</0><0>[2] Srinivasan, B. S. Thoughts on Tokens. Medium. May 27, 2017.</0><0>[3] Dixon, C. Crypto Tokens: A Breakthrough in Open Network Design. Medium. June 1, 2017.</0><0>[4] Hirschman, Albert O. Exit, voice, and loyalty: Reaktionen auf den Niedergang in Unternehmen, Organisationen und Staaten. Vol. 25. Harvard University Press, 1970.</0><0>[5] Rochet, Jean-Charles, und Jean Tirole. "Platform competition in two-sided markets". Journal of the european economic association 1.4 (2003): 990-1029.</0>"
     }
   }
 }
